# d3x

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
core/bindings/: module.cpp
core/include/d3x/: gravity.hpp  integrators.hpp  types.hpp  world.hpp
core/src/: gravity.cpp  integrators.cpp  world.cpp
examples/: earth_moon.py  solar_system.py
scripts/: api_gen.py  sync_readme.py
src/d3x/: __init__.py
src/d3x/_core/: __init__.pyi  constants.pyi
src/d3x/viz/: __init__.py  camera.py  renderer.py  shaders.py  trail.py  window.py
tests/cpp/: test_orbits.cpp
tests/features/: conservation.feature  gravity.feature  integrators.feature  world.feature
tests/python/: conftest.py  test_basic.py  test_hohmann.py
tests/step_defs/: conftest.py  test_conservation.py  test_gravity.py  test_integrators.py  test_world.py
